// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Announcement correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Announcement I am a Announcement is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAnnouncementLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Announcement
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Announcement
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Announcement correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Announcement I am a Announcement is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAnnouncementLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Announcement
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Announcement
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Announcement correctly with just points 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Announcement I am a Announcement is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAnnouncementLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Announcement
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Announcement
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              2
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Announcement correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Announcement I am a Announcement is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAnnouncementLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Announcement
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Announcement
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Assignment correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Assignment I am a Assignment is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAssignmentLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Assignment
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="http://www.non_default_url.com"
          linkRef={[Function]}
          variant="default"
        >
          I am a Assignment
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Assignment correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Assignment I am a Assignment is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAssignmentLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Assignment
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Assignment
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Assignment correctly with just points 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Assignment I am a Assignment is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAssignmentLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Assignment
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Assignment
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              2
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Assignment correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Assignment I am a Assignment is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAssignmentLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Assignment
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Assignment
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Calendar Event correctly with an all day date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Calendar Event I am a Calendar Event is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconCalendarMonthLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Calendar Event
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Calendar Event
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            All Day
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Calendar Event correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Calendar Event I am a Calendar Event is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconCalendarMonthLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Calendar Event
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Calendar Event
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Calendar Event correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Calendar Event I am a Calendar Event is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconCalendarMonthLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Calendar Event
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Calendar Event
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Calendar Event correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Calendar Event I am a Calendar Event is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconCalendarMonthLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Calendar Event
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Calendar Event
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Discussion correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Discussion I am a Discussion is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconDiscussionLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Discussion
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Discussion
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Discussion correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Discussion I am a Discussion is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconDiscussionLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Discussion
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Discussion
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Discussion correctly with just points 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Discussion I am a Discussion is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconDiscussionLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Discussion
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Discussion
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              2
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Discussion correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Discussion I am a Discussion is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconDiscussionLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Discussion
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Discussion
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Note correctly with Group 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Page this is an account-level group page is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#F06291",
      }
    }
  >
    <IconMsWordLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          Account-level group 1 Page
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="/groups/9/pages/this-is-an-account-level-group-page"
          linkRef={[Function]}
          variant="default"
        >
          this is an account-level group page
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Note correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Task I am a Note is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    <Avatar
      inline={true}
      name="Jane"
      size="small"
      src="/picture/is/here"
      variant="circle"
    />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          Math 101 TO DO
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Note
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Note correctly without Course 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Task I am a Note is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": undefined,
      }
    }
  >
    <Avatar
      inline={true}
      name="Jane"
      size="small"
      src="/picture/is/here"
      variant="circle"
    />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
           TO DO
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Note
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Page correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Page I am a Page is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconMsWordLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Page
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Page
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Page correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Page I am a Page is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconMsWordLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
           Page
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Page
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Page correctly with just points 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Page I am a Page is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconMsWordLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Page
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Page
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              2
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Page correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Page I am a Page is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconMsWordLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Page
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Page
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Quiz correctly with everything 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={true}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Quiz I am a Quiz is complete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconQuizLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Quiz
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Quiz
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              4
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Quiz correctly with just date 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Quiz I am a Quiz is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconQuizLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Quiz
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Quiz
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Quiz correctly with just points 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Quiz I am a Quiz is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconQuizLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Quiz
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Quiz
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              2
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Quiz correctly without right side content 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Quiz I am a Quiz is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconQuizLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Quiz
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          I am a Quiz
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="planner-item"
>
  <div>
    <Checkbox
      checked={false}
      disabled={false}
      inline={false}
      label={
        <ScreenReaderContent
          as="span"
        >
          Assignment This Assignment is about awesome stuff is incomplete
        </ScreenReaderContent>
      }
      onChange={[Function]}
      size="medium"
      variant="simple"
    />
  </div>
  <div
    aria-hidden="true"
    style={
      Object {
        "color": "#d71f85",
      }
    }
  >
    <IconAssignmentLine />
  </div>
  <div>
    <div>
      <div>
        <Text
          as="span"
          color="secondary"
          letterSpacing="normal"
          size="x-small"
        >
          A Course about being Diffrient Assignment
        </Text>
      </div>
      <div>
        <Link
          as="button"
          ellipsis={false}
          href="#"
          linkRef={[Function]}
          variant="default"
        >
          This Assignment is about awesome stuff
        </Link>
      </div>
    </div>
    <div>
      <div />
      <div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="medium"
          >
            <Text
              as="span"
              letterSpacing="normal"
              size="large"
            >
              35
            </Text>
            <Text
              as="span"
              letterSpacing="normal"
              size="x-small"
            >
               
              pts
            </Text>
          </Text>
        </div>
        <div>
          <Text
            as="span"
            color="secondary"
            letterSpacing="normal"
            size="x-small"
          >
            DUE: 3:30 AM
          </Text>
        </div>
      </div>
    </div>
  </div>
</div>
`;
